--- a/ETC/template/template.tex
+++ b/ETC/template/template.tex
@@ -65,13 +65,13 @@ bla bla bla
 
 \begin{thebibliography}{9}
 	
-\bibitem{kortereferentie}
+\bibitem{websiteZoveel}
 	\textbf{Bron}, 
 	Titel 
 	[raadpleging]. 
 	\url{http://website.adres/pagina}
 
-\bibitem{ising}
+\bibitem{boekZoveel}
 	\textbf{Auteur}, 
 	Titel, 
 	Uitgever
