--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt]{article}
-\usepackage[pdftex]{graphicx}
+\usepackage{graphicx}
 \usepackage[dutch]{babel}
 \usepackage{amsthm, amsmath, enumitem, fullpage, helvet, color}
 \usepackage[parfill]{parskip}
