--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -26,8 +26,6 @@
 
 \maketitle
 
-\tableofcontents
-
 \Newpage
 
 \section{Inleiding}
@@ -36,6 +34,10 @@
 \item $P = U * I$ (vermogen = spanning * stroom)
 \item $Q = I * t$ (capaciteit = stroom * t)
 \end{itemize}
+
+\Newpage
+
+\section{test}
 
 \end{preview}
 \end{document}
