--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -28,7 +28,7 @@
 
 \Newpage
 
-\section{Inleiding}
+\section{Computervoeding}
 
 \begin{itemize}
 \item $P = U * I$ (vermogen = spanning * stroom)
@@ -37,7 +37,7 @@
 
 \Newpage
 
-\section{test}
+\section{}
 
 \end{preview}
 \end{document}
