--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -31,13 +31,18 @@
 \section{Computervoeding}
 
 \begin{itemize}
-\item $P = U * I$ (vermogen = spanning * stroom)
-\item $Q = I * t$ (capaciteit = stroom * t)
+	\item $P = U * I$ (vermogen = spanning * stroom)
+	\item $Q = I * t$ (capaciteit = stroom * t)
 \end{itemize}
 
 \Newpage
 
-\section{}
+\section{Geheugen}
+
+\begin{itemize}
+	\item Localiteitsprincipes
+	\begin{itemize}
+		\item 
 
 \end{preview}
 \end{document}
