test extra itemize

--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -42,7 +42,17 @@
 \begin{itemize}
 	\item Localiteitsprincipes
 	\begin{itemize}
-		\item 
+		\item tijdsgebonden: je zal iets niet lang erna opnieuw nodig hebben
+		\item plaatsgebonden: je zal de volgende data ook nodig hebben
+	\end{itemize}
+	\item 
+\end{itemize}
+
+\begin{itemize}
+	bla
+	bla
+	item 
+\end{itemize}
 
 \end{preview}
 \end{document}
