--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -48,8 +48,11 @@
 	\item 
 \end{itemize}
 
+\subsection{RAM}
+
 \begin{itemize}
-	\item test 
+	\item DIMM: twee kanten werken apart, SIMM: onderling verbonden (omkeerbaar)
+	\item statisch: flipflop, dynamisch condensator
 \end{itemize}
 
 \end{preview}
