--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -52,7 +52,7 @@
 
 \begin{itemize}
 	\item DIMM: twee kanten werken apart, SIMM: onderling verbonden (omkeerbaar)
-	\item statisch: flipflop, dynamisch condensator
+	\item statisch: flipflop (cache), dynamisch condensator (destructief, herladen) (RAM)
 \end{itemize}
 
 \end{preview}
