--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -12,11 +12,7 @@
 	* Boolean = 8 bits
 	* String = 16 bits
 5. Enkel logische operatoren: &&, ||, !
-6. 
-```Java
-int i;
-i = 0;
-```
+6. `int i; i = 0;`
 7. `int j = 0;`
 8. `String tekst = “blablabla”;`
 9. `Final double KORTINGSPERCENTAGE = 3.3;`
