--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -22,30 +22,30 @@
 	* String tussen “” mag niets anders dan cijfer bevatten.
 	* NumberFormatException
 12.
-int i = 40;       
-String a = Integer.toString(i);
-Typecasting expliciet laten gebeuren => (byte) na de haakjes plaatsen.
-
-a = b = c =d =36
-d = 89
-y = 13
-b = 2
-y = 4 (rest bij 19/5 = 4)
-ik neem aan dat x = int => x = 5
- 
-(a+b)/c
-(w-z)/(y+x)
-(d-b)/(2*a)
-(Math.pow(a, 2) + Math.pow(b, 2))/2
-Math.sqrt((a-b)*(c-d))
-(2*a)/((3*b) + c)
-
-int oppRechthoek = hoogte * breedte
-double inhoudCylinder = Math.PI * (Math.pow(straal, 2)) * hoogte 
-int minAantalBiljetten = (wisselGeld / 10) + (wisselGeld % 10) 
-double soldenPrijs = echtePrijs - (echtePrijs * 0.1)
-  (logische uitdrukking?)
-getal % 1025 == 0
-getal % 2 == 0
-(getal >= a && getal <= b)  
-(x != y && ((1/x) != 3))
+	* int i = 40;
+	* String a = Integer.toString(i);
+13. Typecasting expliciet laten gebeuren => (byte) na de haakjes plaatsen.
+14. 
+	* a = b = c =d =36
+	* d = 89
+	* y = 13
+	* b = 2
+	* y = 4 (rest bij 19/5 = 4)
+	* ik neem aan dat x = int => x = 5
+15.
+	* `(a+b)/c`
+	* `(w-z)/(y+x)`
+	* `(d-b)/(2*a)`
+	* `(Math.pow(a, 2) + Math.pow(b, 2))/2`
+	* `Math.sqrt((a-b)*(c-d))`
+	* `(2*a)/((3*b) + c)`
+16.
+	* `int oppRechthoek = hoogte * breedte`
+	* `double inhoudCylinder = Math.PI * (Math.pow(straal, 2)) * hoogte`
+	* `int minAantalBiljetten = (wisselGeld / 10) + (wisselGeld % 10)`
+	* `double soldenPrijs = echtePrijs - (echtePrijs * 0.1)`
+17. (logische uitdrukking?)
+	* `getal % 1025 == 0`
+	* `getal % 2 == 0`
+	* `(getal >= a && getal <= b)`  
+	* `(x != y && ((1/x) != 3))`
