--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -49,3 +49,16 @@
 	* `getal % 2 == 0`
 	* `(getal >= a && getal <= b)`  
 	* `(x != y && ((1/x) != 3))`
+	* `(aantalDagen % 366 == 0)
+18. `int i = 80;` (voorstelling geheugen: 80)
+19. String stad = “gent” (voorstelling geheugen: stad (adres referentie waar eigenlijke waarde “gent werd opgeslagen”))
+20. (begrijp ik niet echt…)
+21. `s1.equals(s2)`
+22. -1 (geeft hij altijd terug als hij de char niet vindt)
+23. `char a = (b.charAt(b.length()-1))`
+24.  
+	* lastIndexOf = geeft de index terug van de positie waar het gegeven karakter de laatste keer voorkomt in de string. Vb: String a = “ikdoeict” => int i = a.lastIndexOf(‘i’) => uitvoer = 5
+	* endsWith = methode checkt of string met gegeven karakter eindigt.
+	* Ceil(double x) = kleinste geheel getal groter dan of gelijk aan opgegeven getal x
+25. `String.replace(char c1, char c2)`
+26. `String.replaceAll(String regex, String replacement)`
