--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -2,14 +2,14 @@
 2. +, -, /, *, unaire –
 3. <, <=, >, >=, ==, !=
 4. types: 
-	* Byte = 8 bits
-	* Short = 16 bits
-	* Int = 32 bits
-	* Long = 64 bits
-	* Float = 32 bits
-	* Double = 64 bits
-	* Char = 16 bits
-	* Boolean = 8 bits
+	* byte = 8 bits
+	* short = 16 bits
+	* int = 32 bits
+	* long = 64 bits
+	* float = 32 bits
+	* double = 64 bits
+	* char = 16 bits
+	* boolean = 8 bits
 	* String = 16 bits
 5. Enkel logische operatoren: &&, ||, !
 6. `int i; i = 0;`
