--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -1,5 +1,16 @@
 1. 
 	* true
-	* fout
+	* kan niet
 	* true
-	* 
+	* true
+	* true
+2. types: 
+	* byte
+	* short
+	* int
+	* mong
+	* float
+	* double
+	* char
+	* boolean
+	* String
