nog een deel te doen

--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -5,12 +5,14 @@
 	* true
 	* true
 2. types: 
-	* byte
-	* short
-	* int
-	* mong
+	* *byte*
+	* *short*
+	* *int*
+	* long
 	* float
 	* double
-	* char
+	* *char*
 	* boolean
-	* String
+	* *String*
+3. niets
+4. wordt vervolgd...
