--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -16,7 +16,7 @@
 7. `int j = 0;`
 8. `String tekst = “blablabla”;`
 9. `Final double KORTINGSPERCENTAGE = 3.3;`
-10. `Final double PI = Math.PI` (geen idee)
+10. `Final double PI = 3.141593`
 11. 
 	* Int a = Integer.parseInt(s);
 	* String tussen “” mag niets anders dan cijfer bevatten.
