--- a/JavaBasis/2.md
+++ b/JavaBasis/2.md
@@ -1,4 +1,7 @@
 1. een instantie van een klasse voor een verzameling van gelijkaardige objecten met dezelfde eigenschappen en gedragingen.
+   voorbeeld: Kat
+   gedragingen: eet, slaap...
+   eigenschappen: kleur, lengte...
 2. Bytecode
 3. JVM = Java Virtual Machine, JDK = Java Development Kit
 4. Klasse = beschrijving gelijkaardige objecten. Software constructie die gedrag en eigenschappen van verzameling objecten vastlegt
@@ -12,6 +15,6 @@
 
 9. 
     * //commentaar
-    * /*commentaar*/
-10. javac test
-11. java test
+    * /\*commentaar\*/
+10. javac Test.java
+11. java Test
