--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -15,7 +15,7 @@
 6. `int i; i = 0;`
 7. `int j = 0;`
 8. `String tekst = “blablabla”;`
-9. `Final double KORTINGSPERCENTAGE = 3.3;`
+9. `Final double KORTINGSPERCENTAGE = 0.033;
 10. `Final double PI = 3.141593`
 11. 
 	* Int a = Integer.parseInt(s);
