--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -16,3 +16,12 @@
 	* *String*
 3. niets
 4. wordt vervolgd...
+	* a:
+		double sqrtX;
+		if (x >= 0) {
+			sqrtX = Math.sqrt(x);
+			System.out.println(sqrtX);
+		} else {
+			sqrtX = 0;
+			System.out.println("Error");
+		}
