--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -17,6 +17,7 @@
 3. niets
 4. wordt vervolgd...
 	* a:
+		```Java
 		double sqrtX;
 		if (x >= 0) {
 			sqrtX = Math.sqrt(x);
@@ -25,3 +26,5 @@
 			sqrtX = 0;
 			System.out.println("Error");
 		}
+		```
+	* b
