--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -16,7 +16,6 @@
 	* *String*
 3. niets
 4. wordt vervolgd...
-	* a:
 ```Java
 double sqrtX;
 if (x >= 0) {
@@ -27,4 +26,4 @@ if (x >= 0) {
 	System.out.println("Error");
 }
 ```
-	* b
+5. test
