--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -27,3 +27,12 @@
             }
             ```
 5. test
+
+1. item 1
+2. item 2
+
+     <!-- language: lang-js -->
+
+            Code.block('JavaScript', maybe)?
+    
+3. item 3
