--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -14,8 +14,8 @@
     * *char*
     * boolean
     * *String*
-3. niets
-4. wordt vervolgd...
+3. Er gebeurt niets
+4. :
 
     ```Java
     double sqrtX;
@@ -27,5 +27,16 @@
         System.out.println("Error");
     }
     ```
+
+    ```Java
+    if (noemer == 0) {
+        System.out.println("Divide by zero error");
+    } else {
+        double tmp = teller/noemer;
+        System.out.println(tmp);
+    }
+    ```
+
+    
 
 5. test
