--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -37,6 +37,20 @@
     }
     ```
 
-    
+    ```Java
+    int toDrive = 500;  //vervang door wat er ingevoerd wordt
+    double toPay = 0;
+    for (int km = 0; km < toDrive; km++) {
+        if (km < 100) {
+            toPay += 0.5;
+        } else if (km < 200) {
+            toPay += 0.3;
+        } else {
+            toPay += 0.2;
+        }
+    }
+    double average = toPay / toDrive;
+    System.out.println("You have to pay €"+toPay+" for driving "+toDrive+"km. You pay €"+average+"/km on average.");
+    ```
 
 5. test
