--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -53,4 +53,11 @@
     System.out.println("You have to pay €"+toPay+" for driving "+toDrive+"km. You pay €"+average+"/km on average.");
     ```
 
-5. test
+5. :
+    * zal ook "spanning ok" afdrukken als er hoge spanning is. oplossen door `else if()` te gebruiken
+    * als i 0 is en j groter, of j 0 is en i groter of gelijk aan, zal er door 0 gedeeld worden. Oplossen door `if(i = 0)` toe te voegen...
+    * je kan geen switch op een `double` uitvoeren. Oplossen door if-statements te gebruiken.
+    * Zal nooit herkennen als het >100°C is omdat dat later in de statements staat. Wissel de volgorde om.
+6. :
+    * `return;`
+    * `break;` (je kan ook een loop labelen door voor de loop `naamVanJeLabel:` te zetten en dan `break naamVanJeLabel;` te gebruiken om te gaan naar net na de loop.)
