--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -5,13 +5,13 @@
     * true
     * true
 2. types: 
-    * *byte*
-    * *short*
-    * *int*
+    * **byte**
+    * **short**
+    * **int**
     * long
     * float
     * double
-    * *char*
+    * **char**
     * boolean
     * *String*
 3. Er gebeurt niets
@@ -61,3 +61,25 @@
 6. :
     * `return;`
     * `break;` (je kan ook een loop labelen door voor de loop `naamVanJeLabel:` te zetten en dan `break naamVanJeLabel;` te gebruiken om te gaan naar net na de loop.)
+7. Ik heb er voor geopteerd om de beide al te declareren als hetzelfde getal. Andere mogelijkheden kunnen ook natuurlijk.
+    
+    ```Java
+    int i = 0, j = 0;
+    while (i == j) {
+        i = Input.readInt();
+        j = Input.readInt();
+    }
+    ```
+
+8. Initialisatie 0, zodat begint met true.
+
+    ```Java
+    int dobbel1 = 0, dobbel2 = 0;
+    while (dobbel1 == dobbel2) {
+        dobbel1 = (int)(6 * Math.random() + 1);
+        dobbel2 = (int)(6 * Math.random() + 1);
+        System.out.println(dobbel1+" "+dobbel2);
+    }
+    ```
+
+9. :
