--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -90,3 +90,31 @@
     * 7 keer
     * 9 keer
 10. :
+
+    ```Java
+    for (int i = 1; i <= 100; i++) {
+        System.out.println(i);
+    }
+    ```
+
+11. :
+
+    ```Java
+    for (int i = 20; i <= 30; i++) {
+        System.out.print(i+" ");
+    }
+    ```
+
+12. :
+
+    ```Java
+    String separation = ",";
+    for (int i = 20; i <= 30; i++) {
+        if (i = 30) {
+            separation = ".";
+        }
+        System.out.print(i+separation);
+    }
+    ```
+
+13. ...
