--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -1,30 +1,22 @@
-1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
+git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 2. Een verwijzing naar een plaats in het geheugen int[ ] x;
-3. `x = new int [ ] ;`
+3. `x = new int [] ;`
 4. `x = new int [5]; int[ ] x = new int [ ] x;`
 5. `rij.length`
+6. min is 0. max `.lenth - 1`
+7. `int[] x = new int [10];`
+8. `String[] str = new String [10];`
+9. `Banaan[] chiquita = new Banaan[10];`
+10. :
+	
+	```Java
+	int[] rij = new int [10];
+	for (int i = 0; i < rij.length ; i++){
+		rij[i] = i+1
+	}
+	```
 
-6.
-min 0
-max .lenth - 1
-
-7.
-int [ ] x = new int [10];
-
-8.
-String [ ] str = new String [10];
-
-9.
-Banaan [ ] chiquita = new Banaan[10];
-
-10.
-
-int [ ] rij = new int [10];
-for (int i = 0; i < rij.length ; i++){
-	rij[i] = i+1
-}
-
-11. `int [ ] x = {1, 2 ,3 , 4 ,5 ,6 ,7 ,8 ,9 , 10}`
+11. `int[] x = {1, 2 ,3 , 4 ,5 ,6 ,7 ,8 ,9 , 10}`
 
 12. cirkels??!
 
