--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -17,22 +17,16 @@ git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 	```
 
 11. `int[] x = {1, 2 ,3 , 4 ,5 ,6 ,7 ,8 ,9 , 10}`
-
 12. cirkels??!
-
-13.
+13. :
 	* er wordt een nieuwe rij aangemaakt (arr) waar 10 reeële getallen in worden geplaatst.
 	* fout double… int… moet zelfde type zijn
 	* fout: double[ ]bb = {1.0, 2.0, 3.0, 4.0, 5.0} —> wel juist
 	* juist: de rij wordt op het scherm gedrukt vanaf positie 1 (niet 0 dus!) resultaat i: 2.0 3.0 4.0 5.0
 	* fout= int i = aaa.length-1 is wel juist (zonder -1 gaat hij beginnen aftellen van positie 5 (5waarden) maar er is geen positie 5, we beginnen te tellen vanaf 0 dus 0, 1 ,2, 3 ,4 = 5 waarden. 
 
-14.	
-8
-
-  
-15.	
-int [][] rij = new int [3][10];
+14.	`ArrayOutOfBounsException`  
+15.	`int[][] rij = new int [3][10];`
 	
 int op = 1;
 int af = 10;
