--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -26,19 +26,24 @@ git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 	* fout= int i = aaa.length-1 is wel juist (zonder -1 gaat hij beginnen aftellen van positie 5 (5waarden) maar er is geen positie 5, we beginnen te tellen vanaf 0 dus 0, 1 ,2, 3 ,4 = 5 waarden. 
 
 14.	`ArrayOutOfBounsException`  
-15.	`int[][] rij = new int [3][10];`
+15.	
 	
-int op = 1;
-int af = 10;
-int plus2 = 2;
-for(int skip = 0; skip<10; skip++) {
-	rij[0][skip]=op;
-	rij[1][skip]=af;
-	rij[2][skip]=plus2;
-	op++;
-	af--;
-	plus2+=2;
-}
+	```Java
+	int[][] rijA = new int [3][10];
+	int[][] rijB = new int [3][10];
+	int[][] rijC = new int [3][10];
+	int op = 1;
+	int af = 10;
+	int plus2 = 2;
+	for(int skip = 0; skip<10; skip++) {
+		rijA[0][skip]=op;
+		rijB[1][skip]=af;
+		rijC[2][skip]=plus2;
+		op++;
+		af--;
+		plus2+=2;
+	}
+	```
 
 16.
 a)	35? (5*7)
