--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -45,27 +45,26 @@ git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 	}
 	```
 
-16.
-a)	35? (5*7)
-b) 	geen idee :(
+16.:=
+	* 35? (5*7)
+	* geen idee :(
 
-17.	
-tabel[4][0]
+17.	`tabel[4][0]`
+18. geen idee
+19. NOG AF TE WERKEN
+	* 1 lus
 
-18.
-geen idee
+		```Java
+		char [][] rij = new char [2][26];
+		char ch = 'a';
+		char chh = 'A';
+		for(int i = 0; i<26; i++) {
+			rij[0][i]=ch;
+			rij[1][i]=chh;
+			ch++;
+			chh++;
+		}
+		```
 
-19.
-1 lus
-char [][] rij = new char [2][26];
-char ch = 'a';
-char chh = 'A';
-for(int i = 0; i<26; i++) {
-	rij[0][i]=ch;
-	rij[1][i]=chh;
-	ch++;
-	chh++;
-}
-
-geneste lus geen idee
-syntax wtf??
+	* geneste lus geen idee
+	* syntax wtf??
