--- a/JavaBasis/6.md
+++ b/JavaBasis/6.md
@@ -3,59 +3,66 @@
    Indien er dus wel een ander teken in zit zal dit een error geven. ( NumberFormatException )
 2. Dit kan je gewoon doen door er een lege string bij op te tellen, " String str = "" + i; "
    Hier zijn geen voorwaarden aan verbonden.
-3. 
-  (a) Bij de 4de regel moet er in de plaats van i een j staan. ( i wordt ook niet gebruikt in methode dus zou ik weglaten )
-  (b) Bij de 3de regel Je gaat een double delen door een int dus je krijg een "lossy conversion from double to int"
-  (c) Bij de 13de regel moet er tussen int en x een [] "int[] x = {1, -2, 3, -4, 5, -6};"
-4.
+3. :
+  * Bij de 4de regel moet er in de plaats van i een j staan. (i wordt ook niet gebruikt in methode dus zou ik weglaten)
+  * Bij de 3de regel Je gaat een double delen door een int dus je krijg een "lossy conversion from double to int"
+  * Bij de 13de regel moet er tussen int en x een [] "int[] x = {1, -2, 3, -4, 5, -6};"
+4. :
   * "static double sin(double x)"
   * "static double pow(double x, double y)"
   * "static double E()" 
   * "static double random()"
 5. Een veld, echter bij het oproepen van een methode zullen er ook haakjes staan, al dan niet met parameters.
+6. :
 
-6.
-public static int geefAscii(char a) {
-  int ascii = (int)a;
-  return ascii;
-}
+	```Java
+	public static int geefAscii(char a) {
+	  int ascii = (int)a;
+	  return ascii;
+	}
+	```
 
-7.
-public class Hoofdletters {
-	public int method2 (String tekst) {
-		int aantal = 0;
-		for (int i = 0; i < tekst.length() ; i++) {
-			char c = tekst.charAt(i);
-			if (c >= 65 && c <= 90) {
-				aantal++;
+7. :
+
+	```Java
+	public class Hoofdletters {
+		public int method2 (String tekst) {
+			int aantal = 0;
+			for (int i = 0; i < tekst.length() ; i++) {
+				char c = tekst.charAt(i);
+				if (c >= 65 && c <= 90) {
+					aantal++;
+				}
 			}
+			return aantal;
 		}
-		return aantal;
-	}
 
-	public static void main(String[] args) {
-		Hoofdletters t = new Hoofdletters();
-		System.out.println(t.method2("Hoeveel Hoofdletter Heeft deze Boel"));
+		public static void main(String[] args) {
+			Hoofdletters t = new Hoofdletters();
+			System.out.println(t.method2("Hoeveel Hoofdletter Heeft deze Boel"));
+		}
 	}
-}
+	```
 
-8.
-public class Gemiddelde {
-	public double method2 (double getal1, double getal2) {
-		double som = getal1 + getal2;
-		double gemiddelde = som / 2;
-		return gemiddelde;
+8. :
+
+	```Java	
+	public class Gemiddelde {
+		public double method2 (double getal1, double getal2) {
+			double som = getal1 + getal2;
+			double gemiddelde = som / 2;
+			return gemiddelde;
+		}
+
+		public static void main(String[] args) {
+			Gemiddelde t = new Gemiddelde();
+			double i = 50.0;
+			double j = 5.0;
+			System.out.println(t.method2(i, j));
+		}
 	}
+	```
 
-	public static void main(String[] args) {
-		Gemiddelde t = new Gemiddelde();
-		double i = 50.0;
-		double j = 5.0;
-		System.out.println(t.method2(i, j));
-	}
-}
-
-9. "Character.isUpperCase(c)" Waarbij c de variable naam is 
+9. `Character.isUpperCase(c)` Waarbij c de variable naam is 
 10. String woord = makenVanWoord(a, b, c); ( met a, b, c als variable namen ) 
 11. public boolean isZinvol(String tekst)
-12. 
