--- a/JavaBasis/6.md
+++ b/JavaBasis/6.md
@@ -1,17 +1,17 @@
-1. Het omvormen doe je met " int i = Integer.parseInt(str); ".
+1. Het omvormen doe je met `int i = Integer.parseInt(str);`.
    Hierbij moet de string dus enkel bestaan uit gehele getallen, dus geen letters, tekens of komma getallen.
    Indien er dus wel een ander teken in zit zal dit een error geven. ( NumberFormatException )
-2. Dit kan je gewoon doen door er een lege string bij op te tellen, " String str = "" + i; "
+2. Dit kan je gewoon doen door er een lege string bij op te tellen, `String str = "" + i;`
    Hier zijn geen voorwaarden aan verbonden.
 3. :
   * Bij de 4de regel moet er in de plaats van i een j staan. (i wordt ook niet gebruikt in methode dus zou ik weglaten)
-  * Bij de 3de regel Je gaat een double delen door een int dus je krijg een "lossy conversion from double to int"
-  * Bij de 13de regel moet er tussen int en x een [] "int[] x = {1, -2, 3, -4, 5, -6};"
+  * Bij de 3de regel Je gaat een double delen door een int dus je krijg een `lossy conversion from double to int`
+  * Bij de 13de regel moet er tussen int en x een [] `int[] x = {1, -2, 3, -4, 5, -6};`
 4. :
-  * "static double sin(double x)"
-  * "static double pow(double x, double y)"
-  * "static double E()" 
-  * "static double random()"
+  * `static double sin(double x)`
+  * `static double pow(double x, double y)`
+  * `static double E()` 
+  * `static double random()`
 5. Een veld, echter bij het oproepen van een methode zullen er ook haakjes staan, al dan niet met parameters.
 6. :
 
@@ -39,7 +39,7 @@
 
 		public static void main(String[] args) {
 			Hoofdletters t = new Hoofdletters();
-			System.out.println(t.method2("Hoeveel Hoofdletter Heeft deze Boel"));
+			System.out.println(t.method2(`Hoeveel Hoofdletter Heeft deze Boel`));
 		}
 	}
 	```
