--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -50,7 +50,7 @@
 	* `(getal >= a && getal <= b)`  
 	* `(x != y && ((1/x) != 3))`
 	* `(aantalDagen % 366 == 0)
-18. `int i = 80;` (voorstelling geheugen: 80)
+18. `int i = 80;` (voorstelling geheugen: 00000000000000000000000001010000)
 19. String stad = “gent” (voorstelling geheugen: stad (adres referentie waar eigenlijke waarde “gent werd opgeslagen”))
 20. (begrijp ik niet echt…)
 21. `s1.equals(s2)`
