--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -52,7 +52,7 @@
 	* `(aantalDagen % 366 == 0)
 18. `int i = 80;` (voorstelling geheugen: 00000000000000000000000001010000)
 19. String stad = “gent” (voorstelling geheugen: stad (adres referentie waar eigenlijke waarde “gent werd opgeslagen”)) // ik dacht ook in bits : 01100111011001010110111001110100(+00?) aantal bits = aantalKarakters*8 (+2 om einde aan te kondigen ?)
-20. Banaan slet = new Banaan();
+20. `Banaan banaan = new Banaan();`
 21. `s1.equals(s2)`
 22. -1 (geeft hij altijd terug als hij de char niet vindt)
 23. `char a = (b.charAt(b.length()-1))`
