--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -1,8 +1,8 @@
 git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 2. Een verwijzing naar een plaats in het geheugen int[ ] x;
 3. `x = new int [] ;`
-4. `x = new int [5]; int[ ] x = new int [ ] x;`
-5. `rij.length`
+4. `x = new int [5]; int[ ] x = new int [ ] x; int [] x ={1,2,...}; (initializer)`
+5. `rij.length;`
 6. min is 0. max `.lenth - 1`
 7. `int[] x = new int [10];`
 8. `String[] str = new String [10];`
@@ -12,7 +12,7 @@ git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 	```Java
 	int[] rij = new int [10];
 	for (int i = 0; i < rij.length ; i++){
-		rij[i] = i+1
+		rij[i] = i+1;
 	}
 	```
 
@@ -47,7 +47,7 @@ git1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
 
 16.:=
 	* 35? (5*7)
-	* geen idee :(
+	* 3*3=9
 
 17.	`tabel[4][0]`
 18. geen idee
