--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -15,15 +15,15 @@
 6. `int i; i = 0;`
 7. `int j = 0;`
 8. `String tekst = “blablabla”;`
-9. `Final double KORTINGSPERCENTAGE = 0.033;
+9. `Final double KORTINGSPERCENTAGE = 0.033;`
 10. `Final double PI = Math.PI`
 11. 
-	* Int a = Integer.parseInt(s);
+	* `int a = Integer.parseInt(s);`
 	* String tussen “” mag niets anders dan cijfer bevatten.
-	* NumberFormatException
+	* `NumberFormatException`
 12. :
-	* int i = 40;
-	* String a = Integer.toString(i);
+	* `int i = 40;`
+	* `String a = Integer.toString(i);`
 13. Typecasting expliciet laten gebeuren => (byte) na de haakjes plaatsen.
 14. 
 	* a = b = c =d =36
