--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -11,7 +11,7 @@
 	* char = 16 bits
 	* boolean = 8 bits
 	* String = 16 bits
-5. Enkel logische operatoren: &&, ||, !
+5. Enkel logische operatoren: &&, || en == of != //discussie blijkbaar
 6. `int i; i = 0;`
 7. `int j = 0;`
 8. `String tekst = “blablabla”;`
