--- a/JavaBasis/6.md
+++ b/JavaBasis/6.md
@@ -26,7 +26,7 @@
 
 	```Java
 	public class Hoofdletters {
-		public int method2 (String tekst) {
+		public int aantalHoofdletters(String tekst) {
 			int aantal = 0;
 			for (int i = 0; i < tekst.length() ; i++) {
 				char c = tekst.charAt(i);
@@ -39,7 +39,7 @@
 
 		public static void main(String[] args) {
 			Hoofdletters t = new Hoofdletters();
-			System.out.println(t.method2(`Hoeveel Hoofdletter Heeft deze Boel`));
+			System.out.println(t.aantalhoofdletters(`Hoeveel Hoofdletter Heeft deze Boel`));
 		}
 	}
 	```
@@ -48,7 +48,7 @@
 
 	```Java	
 	public class Gemiddelde {
-		public double method2 (double getal1, double getal2) {
+		public double gemiddelde(double getal1, double getal2) {
 			double som = getal1 + getal2;
 			double gemiddelde = som / 2;
 			return gemiddelde;
@@ -58,11 +58,11 @@
 			Gemiddelde t = new Gemiddelde();
 			double i = 50.0;
 			double j = 5.0;
-			System.out.println(t.method2(i, j));
+			System.out.println(t.gemiddelde(i, j));
 		}
 	}
 	```
 
 9. `Character.isUpperCase(c)` Waarbij c de variable naam is
-10. String woord = makenVanWoord(a, b, c); ( met a, b, c als variable namen ) 
-11. public boolean isZinvol(String tekst) 
+10. `String woord = makenVanWoord(a, b, c);` ( met a, b, c als variable namen ) 
+11. `public boolean isZinvol(String tekst)`
