--- a/JavaBasis/6.md
+++ b/JavaBasis/6.md
@@ -6,7 +6,7 @@
 3. :
   * Bij de 4de regel moet er in de plaats van i een j staan. (i wordt ook niet gebruikt in methode dus zou ik weglaten)
   * Bij de 3de regel Je gaat een double delen door een int dus je krijg een `lossy conversion from double to int`
-  * Bij de 13de regel moet er tussen int en x een [] `int[] x = {1, -2, 3, -4, 5, -6};`
+  * Bij de 13de regel moet er tussen `int` en `x` een `[]`. Het wordt dus: `int[] x = {1, -2, 3, -4, 5, -6};`
 4. :
   * `static double sin(double x)`
   * `static double pow(double x, double y)`
