--- a/JavaBasis/2.md
+++ b/JavaBasis/2.md
@@ -1,11 +1,11 @@
 1. een instantie van een klasse voor een verzameling van gelijkaardige objecten met dezelfde eigenschappen en gedragingen.
     * voorbeeld: Kat
-    * gedragingen: eet, slaap...
-    * eigenschappen: kleur, lengte...
+    * gedragingen: eet, slaap …
+    * eigenschappen: kleur, lengte …
 2. Bytecode
 3. JVM = Java Virtual Machine, JDK = Java Development Kit
 4. Klasse = beschrijving gelijkaardige objecten. Software constructie die gedrag en eigenschappen van verzameling objecten vastlegt
-5. Public static void main(String[] args)
+5. `Public static void main(String[] args)`
 6. (niet relevant meer)
 7. A is correct
 8. fouten:
