--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -1,16 +1,16 @@
 1. byte, short, int, long
-2. +, -, /, *, unaire –
-3. <, <=, >, >=, ==, !=
+2. `+`, `-`, `/`, `*`, unaire `–`
+3. `<`, `<=`, `>`, `>=`, `==`, `!=`
 4. types: 
-	* byte    = 8  bits
-	* short   = 16 bits
-	* int     = 32 bits
-	* long    = 64 bits
-	* float   = 32 bits
-	* double  = 64 bits
-	* char    = 16 bits
-	* boolean = 8  bits
-	* String  = 16 bits (geen primitief type)
+	* `byte`    = 8  bits
+	* `short`   = 16 bits
+	* `int`     = 32 bits
+	* `long`    = 64 bits
+	* `float`   = 32 bits
+	* `double`  = 64 bits
+	* `char`    = 16 bits
+	* `boolean` = 8  bits
+	* `String`  = 16 bits (geen primitief type)
 5. Enkel logische operatoren: `&&`, `||` en vergelijkingsoperatoren: `==` of `!=` //discussie mogelijk
 6. `int i; i = 0;`
 7. `int j = 0;`
