--- a/JavaBasis/3.md
+++ b/JavaBasis/3.md
@@ -2,7 +2,7 @@
 2. `+`, `-`, `/`, `*`, unaire `–`
 3. `<`, `<=`, `>`, `>=`, `==`, `!=`
 4. types: 
-	* `byte`    = 8  bits
+	* `byte    = 8  bits
 	* `short`   = 16 bits
 	* `int`     = 32 bits
 	* `long`    = 64 bits
@@ -57,8 +57,8 @@
 22. -1 (geeft hij altijd terug als hij de char niet vindt)
 23. `char a = (b.charAt(b.length()-1))`
 24.  
-	* lastIndexOf = geeft de index terug van de positie waar het gegeven karakter de laatste keer voorkomt in de string. Vb: String a = “ikdoeict” => int i = a.lastIndexOf(‘i’) => uitvoer = 5
-	* endsWith = methode checkt of string met gegeven karakter eindigt.
-	* Ceil(double x) = kleinste geheel getal groter dan of gelijk aan opgegeven getal x
+	* `lastIndexOf(char c)` = geeft de index terug van de positie waar het gegeven karakter de laatste keer voorkomt in de string. Vb: `String a = “ikdoeict”; int i = a.lastIndexOf(‘i’);` => uitvoer = `5`
+	* `endsWith` = methode checkt of string met gegeven karakter eindigt.
+	* `Math.Ceil(double x)` = kleinste geheel getal groter dan of gelijk aan opgegeven getal x
 25. `String.replace(char c1, char c2)`
 26. `String.replaceAll(String regex, String replacement)`
