--- a/JavaBasis/4.md
+++ b/JavaBasis/4.md
@@ -127,11 +127,8 @@
     * 25
     * 15
 
-14. Je zal de fout krijgen van java.lang.StringIndexOutOfBoundsException, dit komt door de i+1.
-	Je probeert de substring te pakken tot een letter i+1 maar deze bestaat niet.
-	Deze error krijg je direct als je de code aanroept.
-15. continue; 
-16. break;
-17. Of tewel "return" of als je met een void werkt gewoon op het eind van de methode.
+14. Je zal de fout krijgen van `java.lang.StringIndexOutOfBoundsException`, dit komt door de i+1. Je probeert de substring te pakken tot een letter i+1 maar deze bestaat niet. Deze error krijg je direct als je de code aanroept.
+15. `continue;`
+16. `break;`
+17. Of tewel `return;` of als je met een void werkt gewoon op het eind van de methode.
 Bij beide manieren kom je terug in de methode met je controle flow of de main methode.
-
