--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -1,7 +1,7 @@
 1. Een rij is een verzameling van een aantal elementen v/h zelfde type.
-2. Een verwijzing naar een plaats in het geheugen int[ ] x;
+2. Een verwijzing naar een plaats in het geheugen `int[] x`;
 3. `x = new int [] ;`
-4. `x = new int [5]; int[ ] x = new int [ ] x; int [] x ={1,2,...};` (initializer)
+4. `x = new int [5]; int[] x = new int[] x; int[] x ={1,2,...};` (initializer)
 5. `rij.length;`
 6. min is 0. max `.lenth - 1`
 7. `int[] x = new int [10];`
