--- a/JavaBasis/5.md
+++ b/JavaBasis/5.md
@@ -67,17 +67,19 @@
 		```
 
 	* geneste lus geen idee
-	char [][] rij = new char [2][26];
-	char ch = 'a';
-	char chh = 'A';
-	for(int i = 0; i<26; i++) {
-		rij[0][i]=ch;
-    		ch++;
-    	  for(int j = 0; j<26; j++){
-    	 		rij[1][j]=chh;
-    	 		chh++
-          }
-	    
-	}* 
+	
+		```Java
+		char [][] rij = new char [2][26];
+		char ch = 'a';
+		char chh = 'A';
+		for(int i = 0; i<26; i++) {
+			rij[0][i]=ch;
+	    		ch++;
+	    	  for(int j = 0; j<26; j++){
+	    	 		rij[1][j]=chh;
+	    	 		chh++
+	          }
+		}
+		```
 	
 	* syntax wtf??
