--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -53,6 +53,7 @@
 \begin{itemize}
 	\item DIMM: twee kanten werken apart, SIMM: onderling verbonden (omkeerbaar)
 	\item statisch: flipflop (cache), dynamisch condensator (destructief, herladen) (RAM)
+	\item FP-DRAM= $\frac{\frac{bytes}{transfer}\cdot \frac{transfers}{burst}\frac{cycli}{sec}}{\frac{cycli}{burst}}$
 \end{itemize}
 
 \end{preview}
