--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -53,7 +53,7 @@
 \begin{itemize}
 	\item DIMM: twee kanten werken apart, SIMM: onderling verbonden (omkeerbaar)
 	\item statisch: flipflop (cache), dynamisch condensator (destructief, herladen) (RAM)
-	\item $\frac{\frac{bytes}{transfer}\cdot \frac{transfers}{burst}\frac{cycli}{sec}}{\frac{cycli}{burst}}$
+	\item $\frac{\frac{bytes}{transfer}\cdot \frac{transfers}{burst}\frac{cycli}{sec}}{\frac{cycli}{burst}}$ vb: $\frac{8 (=64 bit) \frac{bytes}{transfer}\cdot \ 14 (=5+3+3+3) \frac{transfers}{burst} \frac{cycli}{sec}}{\frac{cycli}{burst}}$
 \end{itemize}
 
 \end{preview}
