--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -67,5 +67,14 @@
 	\end{itemize}
 \end{itemize}
 
+\subsection{Cache}
+
+\begin{itemize}
+	\item FIFO: first in first out 
+	\item LRU: least recently used
+	\item LFU: least frequently used
+	\item ARC: adaptive replacement cache (LFU en LRU combinatie)
+\end{itemize}
+
 \end{preview}
 \end{document}
