--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -70,11 +70,24 @@
 \subsection{Cache}
 
 \begin{itemize}
-	\item FIFO: first in first out 
-	\item LRU: least recently used
-	\item LFU: least frequently used
-	\item ARC: adaptive replacement cache (LFU en LRU combinatie)
+	\item Vervangen cache
+	\begin{itemize}
+		\item FIFO: first in first out 
+		\item LRU: least recently used
+		\item LFU: least frequently used
+		\item ARC: adaptive replacement cache (LFU en LRU combinatie)
+	\end{itemize}
+	\item types cache
+	\begin{itemize}
+		\item fully associative: elk deeltje vd RAM heeft een plaats
+		\item direct mapped:  elk deel vd geheugenbank heeft 1 plaats in cache, als overschreven wordt is algoritme nodig
+		\item set-associative: RAM opgedeeld in sets, binnen die sets wordt overschreven
+	\end{itemize}
 \end{itemize}
+
+\section{Data}
+
+
 
 \end{preview}
 \end{document}
