alles ongeveer af

--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -87,7 +87,24 @@
 
 \section{Data}
 
+\begin{itemize}
+	\item sector: kleinste hoeveelheid door kop leesbaar
+	\item track: lijn op schijf
+	\item schijf: \dots
+	%%%TO FINISH SOON
+	\begin{itemize}
+		\item FCFS: first come first serve
+		\item SSTS: shortest seek time first
+		\item SCAN: van 0 $\rightarrow$ einde, doet in terugkeren waaraan er toch gepasseerd wordt
+		\item C-SCAN: slaat alles over in terugkeren
+		\item LOOK: SCAN, maar gaat niet tot einde
+		\item C-LOOK: LOOK, maar slaat alles over in terugkeren
+	\end{itemize}
+\end{itemize}
 
+\subsection{bestandssystemen}
+
+HALP %%to finish
 
 \end{preview}
 \end{document}
