--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -89,6 +89,15 @@
 	\end{itemize}
 \end{itemize}
 
+\subsection{formule}
+\begin{itemize}
+	\item $lines = \frac{cache}{linesize}$
+	\item $sets = \frac{linesize}{wayset}$
+	\item $sets = 2^X \, en \, linesize = 2^Y$
+	\item $taggrootte = (bussize - X - Y) \cdot lines$
+\end{itemize}
+
+
 \Newpage
 
 \section{Data}
