what happened to my minusses

--- a/Computerarchitectuur/formules/formules.tex
+++ b/Computerarchitectuur/formules/formules.tex
@@ -95,7 +95,7 @@
 	\item $sets = \frac{linesize}{wayset}$
 	\item $sets = 2^X \, en \, linesize = 2^Y$
 	\item $taggrootte = (bussize - X - Y) \cdot lines$
-	\item toegangstijd: $t_{totaal} = HR_{L1} \cdot t_{L1} + (1 − HR_{L1}) \cdot HR_{L2} \cdot t_{L2} + (1 − HR_{L1}) \cdot (1 − HR_{L2}) \cdot t_{RAM} $
+	\item toegangstijd: $t_{totaal} = HR_{L1} \cdot t_{L1} + (1 \− HR_{L1}) \cdot HR_{L2} \cdot t_{L2} + (1 \− HR_{L1}) \cdot (1 \− HR_{L2}) \cdot t_{RAM} $
 \end{itemize}
 
 
