--- a/Databanken/02.md
+++ b/Databanken/02.md
@@ -23,4 +23,8 @@ create table countries (
 ) engine='innodb';
 ```
 
-landen in Europa: `select count(*) from countries where Continent = "Europe";`
+landen in Europa:
+
+```SQL
+select count(*) from countries where Continent = "Europe";
+```
