--- a/Databanken/02.md
+++ b/Databanken/02.md
@@ -28,3 +28,27 @@ landen in Europa:
 ```SQL
 select count(*) from countries where Continent = "Europe";
 ```
+
+Grootste 10 landen:
+
+```SQL
+select Name from countries order by SurfaceArea desc limit 10;
+```
+
+Geef in alfabetische volgorde de namen van de landen waarvan de naam begint met ‘Be’.
+
+```SQL
+select Name from countries where Name like "Be%" order by Name asc;
+```
+
+Hoeveel landen hebben er minder dan 10 miljoen inwoners?
+
+```SQL
+select count(*) from countries where Population < 10000000;
+```
+
+Hoe groot is het verschil in levensverwachting tussen het land met het hoogste en het land met de laagste levensverwachting?
+
+```SQL
+select
+```
