--- a/Databanken/02.md
+++ b/Databanken/02.md
@@ -26,29 +26,41 @@ create table countries (
 landen in Europa:
 
 ```SQL
-select count(*) from countries where Continent = "Europe";
+SELECT count(*) FROM countries WHERE Continent = "Europe";
 ```
 
 Grootste 10 landen:
 
 ```SQL
-select Name from countries order by SurfaceArea desc limit 10;
+SELECT Name FROM countries ORDER BY SurfaceArea DESC LIMIT 10;
 ```
 
 Geef in alfabetische volgorde de namen van de landen waarvan de naam begint met ‘Be’.
 
 ```SQL
-select Name from countries where Name like "Be%" order by Name asc;
+SELECT Name FROM countries WHERE Name LIKE "Be%" ORDER BY Name ASC;
 ```
 
 Hoeveel landen hebben er minder dan 10 miljoen inwoners?
 
 ```SQL
-select count(*) from countries where Population < 10000000;
+SELECT count(*) FROM countries WHERE Population < 10000000;
 ```
 
 Hoe groot is het verschil in levensverwachting tussen het land met het hoogste en het land met de laagste levensverwachting?
 
 ```SQL
-select
+SELECT MAX(LifeExpectancy)-MIN(LifeExpectancy) FROM countries;
+```
+
+Geef code, naam en aantal inwoners van alle landen - sorteer volgens continent, en per continent aflopend op aantal inwoners.
+
+```SQL
+SELECT Code, Name, Population FROM countries ORDER BY Continent, Population DESC;
+```
+
+Geef alle landen die onafhankelijk geworden zijn in de 18de eeuw.
+
+```SQL
+SELECT Name FROM countries WHERE IndepYear LIKE "17%";
 ```
