--- a/Databanken/01.md
+++ b/Databanken/01.md
@@ -1,24 +1,22 @@
 ```SQL
-create user 'haroen' identified by '';
+CREATE USER 'haroen' identified by '';
 
-grant all privileges on *.* to 'haroen' with grant option;
+GRANT all privileges ON *.* to 'haroen' with GRANT option;
 
-create database cafe;
+CREATE DATABASE cafe;
 
-use cafe;
+USE cafe;
 
-create table cafe (
-    artikel_id int not null auto_increment,
-    beschr varchar(60) not null,
-    voorraad smallint not null default 0,
-    eenheid varchar(20),
-    primary key (artikel_id)
+CREATE TABLE cafe (
+    artikel_id INT NOT NULL auto_increment,
+    beschr VARCHAR(60) NOT NULL,
+    voorraad SMALLINT NOT NULL default 0,
+    eenheid VARCHAR(20),
+    PRIMARY KEY (artikel_id)
 ) engine='innodb';
 
-show databases;
-```
+SHOW databases;
 
-```SQL
 +--------------------+
 | Database           |
 +--------------------+
@@ -28,60 +26,56 @@ show databases;
 | performance_schema |
 | test               |
 +--------------------+
-5 rows in set (0.10 sec)
-```
-```SQL
+
 DESC cafe;
+
 +------------+-------------+------+-----+---------+----------------+
 | Field      | Type        | Null | Key | Default | Extra          |
 +------------+-------------+------+-----+---------+----------------+
-| artikel_id | int(11)     | NO   | PRI | NULL    | auto_increment |
-| beschr     | varchar(60) | NO   |     | NULL    |                |
-| voorraad   | smallint(6) | NO   |     | 0       |                |
-| eenheid    | varchar(20) | YES  |     | NULL    |                |
+| artikel_id | INT(11)     | NO   | PRI | NULL    | auto_increment |
+| beschr     | VARCHAR(60) | NO   |     | NULL    |                |
+| voorraad   | SMALLINT(6) | NO   |     | 0       |                |
+| eenheid    | VARCHAR(20) | YES  |     | NULL    |                |
 +------------+-------------+------+-----+---------+----------------+
-4 rows in set (0.04 sec)
 
-mysql> create table artikelen (
-    ->     artikel_id int not null auto_increment,
-    ->     beschr varchar(60) not null,
-    ->     voorraad smallint not null default 0,
-    ->     eenheid varchar(20),
-    ->     prijs decimal(5,2) not null,
-    ->     primary key (artikel_id)
-    -> ) engine='innodb';
+CREATE TABLE artikelen (
+    artikel_id INT NOT NULL auto_increment,
+    beschr VARCHAR(60) NOT NULL,
+    voorraad SMALLINT NOT NULL default 0,
+    eenheid VARCHAR(20),
+    prijs decimal(5,2) NOT NULL,
+    PRIMARY KEY (artikel_id)
+) engine='innodb';
 
 
-mysql> desc artikelen;
+DESC artikelen;
+
 +------------+--------------+------+-----+---------+----------------+
 | Field      | Type         | Null | Key | Default | Extra          |
 +------------+--------------+------+-----+---------+----------------+
-| artikel_id | int(11)      | NO   | PRI | NULL    | auto_increment |
-| beschr     | varchar(60)  | NO   |     | NULL    |                |
-| voorraad   | smallint(6)  | NO   |     | 0       |                |
-| eenheid    | varchar(20)  | YES  |     | NULL    |                |
+| artikel_id | INT(11)      | NO   | PRI | NULL    | auto_increment |
+| beschr     | VARCHAR(60)  | NO   |     | NULL    |                |
+| voorraad   | SMALLINT(6)  | NO   |     | 0       |                |
+| eenheid    | VARCHAR(20)  | YES  |     | NULL    |                |
 | prijs      | decimal(5,2) | NO   |     | NULL    |                |
 +------------+--------------+------+-----+---------+----------------+
-5 rows in set (0.01 sec)
 
-mysql> insert into artikelen (beschr,voorraad,eenheid) VALUES("Palm 24 x 33cl","20","bak"),("Palm 24 x 25cl","20","bak");
- (0.06 sec)
-Records: 2  Duplicates: 0  Warnings: 1
+INSERT INTO artikelen (beschr,voorraad,eenheid) VALUES("Palm 24 x 33cl","20","bak"),("Palm 24 x 25cl","20","bak");
 
-mysql> select * from artikelen;
+SELECT * FROM artikelen;
+
 +------------+----------------+----------+---------+-------+
 | artikel_id | beschr         | voorraad | eenheid | prijs |
 +------------+----------------+----------+---------+-------+
 |          1 | Palm 24 x 33cl |       20 | bak     |  0.00 |
 |          2 | Palm 24 x 25cl |       20 | bak     |  0.00 |
 +------------+----------------+----------+---------+-------+
-2 rows in set (0.00 sec)
 
-mysql> insert into artikelen (beschr,voorraad,eenheid) VALUES("rode huiswijn 75cl","20","fles"),("witte huiswijn 75cl","12","fles"),("Spa Rood 24 x 20cl","12","bak"),("Spa Blauw 24 x 20cl","15","bak"),("Geuze 75cl","24","fles"),("Westmalle 24 x 33cl","10","bak");
- (0.02 sec)
-Records: 6  Duplicates: 0  Warnings: 1
+INSERT INTO artikelen (beschr,voorraad,eenheid) VALUES("rode huiswijn 75cl","20","fles"),("witte huiswijn 75cl","12","fles"),("Spa Rood 24 x 20cl","12","bak"),("Spa Blauw 24 x 20cl","15","bak"),("Geuze 75cl","24","fles"),("Westmalle 24 x 33cl","10","bak");
 
-mysql> select * from artikelen;
+
+SELECT * FROM artikelen;
+
 +------------+---------------------+----------+---------+-------+
 | artikel_id | beschr              | voorraad | eenheid | prijs |
 +------------+---------------------+----------+---------+-------+
@@ -96,17 +90,12 @@ mysql> select * from artikelen;
 +------------+---------------------+----------+---------+-------+
 8 rows in set (0.00 sec)
 
-```SQL
 UPDATE artikelen
     SET beschr = "Kriek Lindemans 37.5cl"
 WHERE artikel_id = 7;
-```
 
-```
-select * from artikelen;
-```
+SELECT * FROM artikelen;
 
-```
 +------------+------------------------+----------+---------+-------+
 | artikel_id | beschr                 | voorraad | eenheid | prijs |
 +------------+------------------------+----------+---------+-------+
@@ -120,15 +109,11 @@ select * from artikelen;
 |          8 | Westmalle 24 x 33cl    |       10 | bak     |  0.00 |
 +------------+------------------------+----------+---------+-------+
 8 rows in set (0.00 sec)
-```
 
-```SQL
 alter table artikelen change prijs prijs float(5.1);
 
-select * from artikelen;
-```
+SELECT * FROM artikelen;
 
-```
 +------------+------------------------+----------+---------+-------+
 | artikel_id | beschr                 | voorraad | eenheid | prijs |
 +------------+------------------------+----------+---------+-------+
@@ -141,17 +126,11 @@ select * from artikelen;
 |          7 | Kriek Lindemans 37.5cl |       24 | fles    |     0 |
 |          8 | Westmalle 24 x 33cl    |       10 | bak     |     0 |
 +------------+------------------------+----------+---------+-------+
-```
 
-```SQL
 alter table artikelen change prijs prijs float(5.1) default "0.0";
-```
 
-```SQL
-select * from artikelen;
-```
+SELECT * FROM artikelen;
 
-```
 +------------+------------------------+----------+---------+-------+
 | artikel_id | beschr                 | voorraad | eenheid | prijs |
 +------------+------------------------+----------+---------+-------+
