--- a/Digitale Technieken 1/les/2.md
+++ b/Digitale Technieken 1/les/2.md
@@ -41,3 +41,12 @@ Karnaud-kaart
 	  1 |1 |0 |0 |0 |
 	    +--+--+--+--+
 ```
+
+Pulsdiagram:
+
+```
+A = _-_-_-_-
+B = __--__--
+C = ____----
+Y = _--_-___
+```
