--- a/Digitale Technieken 1/les/2.md
+++ b/Digitale Technieken 1/les/2.md
@@ -27,7 +27,7 @@ ABC Y
 100 1
 101 0
 110 0
-111 0
+111 0 (in de praktijk: 1 (door te gebruiken van 2 XOR-poorten met 2 ingangen))
 ```
 
 Karnaud-kaart
@@ -38,7 +38,7 @@ Karnaud-kaart
 	    +--+--+--+--+
 	  0 |0 |1 |0 |1 |
 	 A  +--+--+--+--+
-	  1 |1 |0 |0 |0 |
+	  1 |1 |0 |0 |1 |
 	    +--+--+--+--+
 ```
 
