--- a/Digitale Technieken 1/les/02.md
+++ b/Digitale Technieken 1/les/02.md
@@ -50,3 +50,13 @@ B = __--__--
 C = ____----
 Y = _--_-___
 ```
+
+`Y=AB+\overline{(AB)(+)C}`
+
+```
+A ----
+ 	  &--------
+B ----   |    |
+         |    ≤1\---Y
+C ------=1----
+```
